@@ -19,15 +19,7 @@
 
 package querqy.opensearch.rewriter;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static querqy.opensearch.rewriter.WordBreakCompoundRewriterFactory.DEFAULT_ALWAYS_ADD_REVERSE_COMPOUNDS;
 import static querqy.opensearch.rewriter.WordBreakCompoundRewriterFactory.DEFAULT_LOWER_CASE_INPUT;
@@ -37,25 +29,30 @@ import static querqy.opensearch.rewriter.WordBreakCompoundRewriterFactory.DEFAUL
 import static querqy.opensearch.rewriter.WordBreakCompoundRewriterFactory.DEFAULT_VERIFY_DECOMPOUND_COLLATION;
 import static querqy.opensearch.rewriter.WordBreakCompoundRewriterFactory.MAX_CHANGES;
 
-import java.lang.reflect.Field;
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
+import org.apache.lucene.analysis.Analyzer;
+import org.apache.lucene.analysis.core.WhitespaceAnalyzer;
+import org.apache.lucene.document.Document;
+import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.IndexReader;
-import org.apache.lucene.index.IndexReaderContext;
-import org.apache.lucene.index.Term;
 import org.apache.lucene.search.spell.WordBreakSpellChecker;
 import org.apache.lucene.search.IndexSearcher;
+import org.apache.lucene.store.Directory;
+import org.apache.lucene.tests.index.RandomIndexWriter;
+import org.apache.lucene.tests.util.LuceneTestCase;
 import org.opensearch.index.query.QueryShardContext;
 import querqy.opensearch.DismaxSearchEngineRequestAdapter;
 import org.opensearch.index.shard.IndexShard;
 import org.hamcrest.Matchers;
 import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;;
 import querqy.lucene.contrib.rewrite.wordbreak.LuceneCompounder;
 import querqy.lucene.contrib.rewrite.wordbreak.MorphologicalWordBreaker;
 import querqy.lucene.contrib.rewrite.wordbreak.WordBreakCompoundRewriter;
@@ -63,24 +60,23 @@ import querqy.rewrite.RewriterFactory;
 import querqy.trie.TrieMap;
 
 
-@RunWith(MockitoJUnitRunner.class)
-public class WordBreakCompoundRewriterFactoryTest {
+public class WordBreakCompoundRewriterFactoryTest extends LuceneTestCase {
 
     @Test(expected = IllegalArgumentException.class)
-    public void testConfigureRequiresDictionaryField() throws Exception {
+    public void testConfigureRequiresDictionaryField() {
         final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
         factory.configure(Collections.emptyMap());
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void testConfigureRequiresNonEmptyDictionaryField() throws Exception {
+    public void testConfigureRequiresNonEmptyDictionaryField() {
         final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
         factory.configure(Collections.singletonMap("dictionaryField", " "));
     }
 
 
     @Test
-    public void testConfigureRequiresDictionaryFieldOnly() throws Exception {
+    public void testConfigureRequiresDictionaryFieldOnly() {
         final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
         factory.configure(Collections.singletonMap("dictionaryField", "f1"));
     }
@@ -92,11 +88,11 @@ public class WordBreakCompoundRewriterFactoryTest {
         final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
         final List<String> errors1 = factory.validateConfiguration(Collections.emptyMap());
         assertEquals(1, errors1.size());
-        assertTrue(errors1.get(0).contains("dictionaryField"));
+        assertTrue(errors1.getFirst().contains("dictionaryField"));
 
         final List<String> errors2 = factory.validateConfiguration(Collections.singletonMap("dictionaryField", ""));
         assertEquals(1, errors2.size());
-        assertTrue(errors2.get(0).contains("dictionaryField"));
+        assertTrue(errors2.getFirst().contains("dictionaryField"));
 
     }
 
@@ -120,7 +116,7 @@ public class WordBreakCompoundRewriterFactoryTest {
     }
 
     @Test
-    public void testThatDefaultConfigurationIsApplied() throws Exception {
+    public void testThatDefaultConfigurationIsApplied() {
 
         final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
         factory.configure(Collections.singletonMap("dictionaryField", "f1"));
@@ -141,34 +137,11 @@ public class WordBreakCompoundRewriterFactoryTest {
         final MorphologicalWordBreaker wordBreaker = factory.getWordBreaker();
         assertNotNull(wordBreaker);
 
-        final IndexReader indexReader = mock(IndexReader.class);
-        final IndexReaderContext topReaderContext = mock(IndexReaderContext.class);
-
-        when(indexReader.getContext()).thenReturn(topReaderContext);
-        when(topReaderContext.reader()).thenReturn(indexReader);
-        // This is horrible, but there seems to be no way to mock top level IndexReaderContext
-        final Field field = IndexReaderContext.class.getDeclaredField("isTopLevel");
-        field.setAccessible(true);
-        field.setBoolean(topReaderContext, true);
-        field.setAccessible(false);
-
-        when(indexReader.docFreq(new Term("f1", "def"))).thenReturn(20);
-
-        wordBreaker.breakWord("abcdef", indexReader, 2, true);
-        verify(indexReader, times(1)).docFreq(eq(new Term("f1", "def")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f1", "abc")));
-        // min break length is 3:
-        verify(indexReader, times(0)).docFreq(eq(new Term("f1", "ab")));
-        // this will not be called by DEFAULT morphology:
-        verify(indexReader, times(0)).docFreq(eq(new Term("f1", "cdef")));
-        verify(indexReader, times(0)).docFreq(eq(new Term("f1", "abce")));
-
-
     }
 
 
     @Test
-    public void testThatConfigurationIsApplied() throws Exception  {
+    public void testThatConfigurationIsApplied() {
 
         final Map<String, Object> config = new HashMap<>();
         config.put("minSuggestionFreq", 11);
@@ -178,7 +151,7 @@ public class WordBreakCompoundRewriterFactoryTest {
         config.put("lowerCaseInput", !DEFAULT_LOWER_CASE_INPUT);
         config.put("alwaysAddReverseCompounds", !DEFAULT_ALWAYS_ADD_REVERSE_COMPOUNDS);
         config.put("reverseCompoundTriggerWords", Arrays.asList("für", "aus"));
-        config.put("protectedWords", Arrays.asList("blumen"));
+        config.put("protectedWords", List.of("blumen"));
         config.put("morphology", "GERMAN");
 
         Map<String, Object> decompoundConf = new HashMap<>();
@@ -218,40 +191,19 @@ public class WordBreakCompoundRewriterFactoryTest {
         final MorphologicalWordBreaker wordBreaker = factory.getWordBreaker();
         assertNotNull(wordBreaker);
 
-        final IndexReader indexReader = mock(IndexReader.class);
-        final IndexReaderContext topReaderContext = mock(IndexReaderContext.class);
-
-        when(indexReader.getContext()).thenReturn(topReaderContext);
-        when(topReaderContext.reader()).thenReturn(indexReader);
-        // This is horrible, but there seems to be no way to mock top level IndexReaderContext
-        final Field field = IndexReaderContext.class.getDeclaredField("isTopLevel");
-        field.setAccessible(true);
-        field.setBoolean(topReaderContext, true);
-        field.setAccessible(false);
-
-        when(indexReader.docFreq(new Term("f2", "de"))).thenReturn(20);
-
-        wordBreaker.breakWord("abcde", indexReader, 2, true);
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "e")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "de")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "cde")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "bcde")));
-        // this will be generated by GERMAN morphology:
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "abce")));
-
     }
 
     @Test
     public void testThatDecompoundMorphologyIsApplied() throws Exception  {
         final Map<String, Object> config = new HashMap<>();
-        config.put("minSuggestionFreq", 11);
+        config.put("minSuggestionFreq", 2);
         config.put("maxCombineLength", 22);
         config.put("minBreakLength", 1);
         config.put("dictionaryField", "f2");
         config.put("lowerCaseInput", !DEFAULT_LOWER_CASE_INPUT);
         config.put("alwaysAddReverseCompounds", !DEFAULT_ALWAYS_ADD_REVERSE_COMPOUNDS);
         config.put("reverseCompoundTriggerWords", Arrays.asList("für", "aus"));
-        config.put("protectedWords", Arrays.asList("blumen"));
+        config.put("protectedWords", List.of("blumen"));
         Map<String, Object> decompoundConf = new HashMap<>();
         config.put("decompound", decompoundConf);
         decompoundConf.put("verifyCollation", !DEFAULT_VERIFY_DECOMPOUND_COLLATION);
@@ -261,36 +213,44 @@ public class WordBreakCompoundRewriterFactoryTest {
         factory.configure(config);
         final MorphologicalWordBreaker wordBreaker = factory.getWordBreaker();
         assertNotNull(wordBreaker);
-        final IndexReader indexReader = mock(IndexReader.class);
-        final IndexReaderContext topReaderContext = mock(IndexReaderContext.class);
-        when(indexReader.getContext()).thenReturn(topReaderContext);
-        when(topReaderContext.reader()).thenReturn(indexReader);
-        // This is horrible, but there seems to be no way to mock top level IndexReaderContext
-        final Field field = IndexReaderContext.class.getDeclaredField("isTopLevel");
-        field.setAccessible(true);
-        field.setBoolean(topReaderContext, true);
-        field.setAccessible(false);
-        when(indexReader.docFreq(new Term("f2", "de"))).thenReturn(20);
-        wordBreaker.breakWord("abcde", indexReader, 2, true);
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "e")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "de")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "cde")));
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "bcde")));
-        // this will be generated by GERMAN morphology:
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "abce")));
+
+        final Analyzer analyzer = new WhitespaceAnalyzer();
+        final Directory directory = newDirectory();
+        final RandomIndexWriter indexWriter = new RandomIndexWriter(random(), directory, analyzer);
+
+        addNumDocsWithTextField("f2", "arbeit jacke", indexWriter, 12);
+
+        indexWriter.close();
+
+        try (final IndexReader indexReader = DirectoryReader.open(directory)) {
+            final List<CharSequence[]> broken = wordBreaker.breakWord("arbeitsjacke", indexReader, 2, true);
+            assertNotNull(broken);
+            assertEquals(1, broken.size());
+            final CharSequence[] result = broken.getFirst();
+            assertNotNull(result);
+            assertEquals("arbeit", result[0].toString());
+            assertEquals("jacke", result[1].toString());
+        } finally {
+            try {
+                directory.close();
+            } catch (final IOException e) {
+                //
+            }
+        }
+
     }
 
     @Test
     public void testThatCompoundMorphologyIsApplied() throws Exception  {
         final Map<String, Object> config = new HashMap<>();
         config.put("minSuggestionFreq", 11);
-        config.put("maxCombineLength", 22);
+        config.put("maxCombineLength", 5);
         config.put("minBreakLength", 1);
         config.put("dictionaryField", "f2");
         config.put("lowerCaseInput", !DEFAULT_LOWER_CASE_INPUT);
         config.put("alwaysAddReverseCompounds", !DEFAULT_ALWAYS_ADD_REVERSE_COMPOUNDS);
         config.put("reverseCompoundTriggerWords", Arrays.asList("für", "aus"));
-        config.put("protectedWords", Arrays.asList("blumen"));
+        config.put("protectedWords", List.of("blumen"));
         final Map<String, Object> decompoundConf = new HashMap<>();
         config.put("decompound", decompoundConf);
         decompoundConf.put("verifyCollation", !DEFAULT_VERIFY_DECOMPOUND_COLLATION);
@@ -303,42 +263,86 @@ public class WordBreakCompoundRewriterFactoryTest {
         final LuceneCompounder compounder = factory.getCompounder();
         final MorphologicalWordBreaker wordBreaker = factory.getWordBreaker();
         assertNotNull(wordBreaker);
-        final IndexReader indexReader = mock(IndexReader.class);
-        final IndexReaderContext topReaderContext = mock(IndexReaderContext.class);
-        // This is horrible, but there seems to be no way to mock top level IndexReaderContext
-        final Field field = IndexReaderContext.class.getDeclaredField("isTopLevel");
-        field.setAccessible(true);
-        field.setBoolean(topReaderContext, true);
-        field.setAccessible(false);
-        compounder.combine(new querqy.model.Term[] {
-                new querqy.model.Term(null, "ab"), new querqy.model.Term(null, "de")}, indexReader, false);
-        // this will be generated by GERMAN morphology:
-        verify(indexReader, times(1)).docFreq(eq(new Term("f2", "absde")));
+
+        final Analyzer analyzer = new WhitespaceAnalyzer();
+        final Directory directory = newDirectory();
+        final RandomIndexWriter indexWriter = new RandomIndexWriter(random(), directory, analyzer);
+
+        addNumDocsWithTextField("f2", "absde", indexWriter, 12);
+
+        indexWriter.close();
+
+        try (final IndexReader indexReader = DirectoryReader.open(directory)) {
+            final List<LuceneCompounder.CompoundTerm> combined = compounder.combine(new querqy.model.Term[]{
+                    new querqy.model.Term(null, "ab"), new querqy.model.Term(null, "de")}, indexReader, false);
+            // this will be generated by GERMAN morphology:
+            assertNotNull(combined);
+            assertEquals(1, combined.size());
+            assertEquals("absde", combined.getFirst().value.toString());
+
+        }  finally {
+            try {
+                directory.close();
+            } catch (final IOException e) {
+                //
+            }
+        }
     }
 
     @Test
     public void testCreateRewriter() throws Exception {
-        final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
-        factory.configure(Collections.singletonMap("dictionaryField", "f1"));
-        final IndexShard indexShard = mock(IndexShard.class);
-        final IndexReader indexReader = mock(IndexReader.class);
-        final IndexReaderContext topReaderContext = mock(IndexReaderContext.class);
-        when(topReaderContext.reader()).thenReturn(indexReader);
-        // This is horrible, but there seems to be no way to mock top level IndexReaderContext
-        final Field field = IndexReaderContext.class.getDeclaredField("isTopLevel");
-        field.setAccessible(true);
-        field.setBoolean(topReaderContext, true);
-        field.setAccessible(false);
 
-        final QueryShardContext searchExecutionContext = mock(QueryShardContext.class);
-        final IndexSearcher searcher = mock(IndexSearcher.class);
-        when(searchExecutionContext.searcher()).thenReturn(searcher);
-        when(searcher.getTopReaderContext()).thenReturn(topReaderContext);
-        final DismaxSearchEngineRequestAdapter searchEngineRequestAdapter =
-                mock(DismaxSearchEngineRequestAdapter.class);
-        when(searchEngineRequestAdapter.getSearchExecutionContext()).thenReturn(searchExecutionContext);
-        final RewriterFactory rewriterFactory = factory.createRewriterFactory(indexShard);
-        assertTrue(rewriterFactory.createRewriter(null, searchEngineRequestAdapter) instanceof
-                WordBreakCompoundRewriter);
+
+        final Analyzer analyzer = new WhitespaceAnalyzer();
+        final Directory directory = newDirectory();
+        final RandomIndexWriter indexWriter = new RandomIndexWriter(random(), directory, analyzer);
+        indexWriter.close();
+
+        try (final IndexReader indexReader = DirectoryReader.open(directory)) {
+            final QueryShardContext searchExecutionContext = mock(QueryShardContext.class);
+            final IndexShard indexShard = mock(IndexShard.class);
+
+            final IndexSearcher searcher = mock(IndexSearcher.class);
+            when(searchExecutionContext.searcher()).thenReturn(searcher);
+
+            when(searcher.getTopReaderContext()).thenReturn(indexReader.getContext());
+
+            final WordBreakCompoundRewriterFactory factory = new WordBreakCompoundRewriterFactory("r1");
+            factory.configure(Collections.singletonMap("dictionaryField", "f1"));
+
+            final DismaxSearchEngineRequestAdapter searchEngineRequestAdapter =
+                    mock(DismaxSearchEngineRequestAdapter.class);
+
+            when(searchEngineRequestAdapter.getSearchExecutionContext()).thenReturn(searchExecutionContext);
+            final RewriterFactory rewriterFactory = factory.createRewriterFactory(indexShard);
+            assertTrue(rewriterFactory.createRewriter(null, searchEngineRequestAdapter) instanceof
+                    WordBreakCompoundRewriter);
+
+
+        } finally {
+            try {
+                directory.close();
+            } catch (final IOException e) {
+                //
+            }
+        }
+
+
+
+
+
+
+    }
+
+    public static void addNumDocsWithTextField(final String fieldname, final String value,
+                                               final RandomIndexWriter indexWriter, final int num) throws IOException {
+        indexWriter.addDocuments(IntStream.range(0, num).mapToObj(i -> {
+
+            final Document doc = new Document();
+            doc.add(LuceneTestCase.newTextField(fieldname, value, org.apache.lucene.document.Field.Store.YES));
+            return doc;
+
+        }).collect(Collectors.toList()));
+
     }
 }
